--- a/wordpress/test/snail.html
+++ b/wordpress/test/snail.html
@@ -24,6 +24,11 @@
 			  <p></p>
       </div>
     </div>
+    <div class="navigation">
+      <div>
+        <a href="https://www.example.com/page/2/" >&laquo; Previous Entries</a>
+      </div>
+    </div>
     <div id="footer">
       I'm a footer
     </div>
